sources/2.1.0/sections/aa-data_class_enc_.adoc

[%portrait]
<<<

[[annex-data-classification-and-encoding-guide]]
[appendix]
== Data Classification and Encoding Guide

=== Features

==== BathymetryCoverage

.BathymetryCoverage feature parameters
[cols="a,a,a,a"]
|===
4+|IHO Definition: Bathymetry Coverage. A set of value items required to define a dataset representing a depth calculation and its associated uncertainty.
4+h|Primitive: S-100_Grid_Coverage
h|Attribute h|Allowable Encoding Value h|Type h|Multiplicity

|depth
|Must be in decimal metres with precision not to exceed 0.01 metres
|real
|1

|uncertainty
|Must be in decimal metres with precision not to exceed 0.01 metres
|real
|1
|===


=== Feature Attributes

==== BathymetryCoverage

.BathymetryCoverage feature attribute parameters
[cols="a"]
|===

|IHO Definition: *depth*. The vertical distance from a given water level to the bottom [<<iho-s32>>].

|Unit: metres

|Resolution: 0.01

|Remarks:

* Drying heights (drying depths) are indicated by a negative value.

|IHO Definition: *uncertainty*. The interval (about a given value) that will contain the true value of the measurement at a specific confidence level [<<iho-s44>>].

|Unit: metres

|Resolution: 0.01

|Remarks:

* Represents a +/- value defining the possible range of associated depth.
* Expressed a positive number.

|===
